# deepsensorNZ

./: .gitattributes  .gitignore  README.md  __init__.py  environment.yml  requirements.lock.txt  requirements.txt  setup.py
data_explore/: get_era5.py  vis_stations.py  vis_topography.py  vis_topography2.py
data_process/: era5.py  stations.py  topography.py
deepsensor/: ds_test.py  nz_downscaling.py
experiments/: bs_to_nesi.py  move_data_bs_nesi.sh  move_wrf_data_bs_nesi.sh
experiments/data_explore/: get_era5.py  interp_methods.ipynb  vis_era5.py  vis_stations.py  vis_topography.py  vis_wrf.py
experiments/data_explore/_old/: vis_topography.py
experiments/data_explore/by_variable/: precipitation.ipynb  relative_humidity.ipynb  surface_pressure.ipynb  temperature.ipynb  winds.ipynb
experiments/deepsensor/: nz_downscaling.py  nz_downscaling2.py
experiments/deepsensor/.risa_dev_local/: nz_downscaling2.py  test_downscale.py
experiments/deepsensor/maxime_dev_nesi/: pyproject.toml  requirements.txt  train_downscaling.py  train_downscaling.sl
experiments/deepsensor/maxime_dev_nesi/notebooks/: training_curves.ipynb
experiments/deepsensor/maxime_dev_nesi/src/: nzdownscale
nzdownscale/dataprocess/: config.py  config_local.py  era5.py  stations.py  topography.py  utils.py  wrf.py
nzdownscale/downscaler/: getdata.py  inspect.py  model.py  preprocess.py  train.py  validate.py  validate_ERA.py  validate_WRF.py  validate_v2.py
outputs/: infer.py
outputs/paper/: timeseries.ipynb
visualisation/: stations.py  topography.py
(+51 files in other folders)
