[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nzdownscale"
version = "0.1.0"
authors = [
    { name = "Risa Ueno", email = "risno@bas.ac.uk" },
]
dependencies = [
    "defopt",
    "numpy",
    "scipy",
    "xarray",
    "pandas",
    "joblib",
    "tqdm",
    "matplotlib",
    "cartopy",
    "seaborn",
    "torch",
    "backends",
    "backends-matrix",
    "deepsensor",
    "dill"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "ruff",
    "pdbpp",
    "memray",
    "pyinstrument",
    "scalene"
]

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E203"]
extend-exclude = [".ipynb_checkpoints"]
extend-include = ["*.ipynb"]
